--- a/CarMarketplace.Web/Views/Lender/BecomeLender.cshtml
+++ b/CarMarketplace.Web/Views/Lender/BecomeLender.cshtml
@@ -1,7 +1,7 @@
 ﻿@model LenderPersonalInfoViewModel
 
 @{
-    ViewData["Title"] = "Lender!";
+    ViewData["Title"] = "Lender";
 }
 
 <h3 class="mt-5 mb-2">We need your personal information in order to become a @ViewData["Title"]!</h3>
