--- a/CarMarketplace.Web/Views/Sale/Search.cshtml
+++ b/CarMarketplace.Web/Views/Sale/Search.cshtml
@@ -8,7 +8,7 @@
 </div>
 
 <partial name="_ValidationScriptsPartial" />
-<form method="get" asp-action="Result" asp-controller="Sale">
+<form method="post" asp-action="Search" asp-controller="Sale">
     <fieldset>
         <div class="form-group">
             <label class="form-label mt-4 fs-3">Select Make</label>
