--- a/CarMarketplace.Web/wwwroot/css/site.css
+++ b/CarMarketplace.Web/wwwroot/css/site.css
@@ -117,3 +117,13 @@ a .img-nav {
     right: 10px;
     margin-bottom: -60px
 }
+
+.page-link {
+    background-color: #2c3e50
+}
+
+.page-link:hover {
+    color: white;
+    background-color: #3f5a73;
+    border-color: #3f5a73;
+}
