--- a/CarMarketplace.Web/Areas/Lender/Views/Lender/LenderPosts.cshtml
+++ b/CarMarketplace.Web/Areas/Lender/Views/Lender/LenderPosts.cshtml
@@ -62,16 +62,20 @@
         </div>
     }
 </div>
-<nav aria-label="...">
-    <ul class="pagination justify-content-center">
-        @for (var i = 1; i <= Model.PageCount; i++)
-        {
-            <li class="page-item @(i == Model.CurrentPage ? "active" : "")">
-                <a class="page-link" href="javascript:void(0);" onclick="loadPage(@i-1,event)">@i</a>
-            </li>
-        }
-    </ul>
-</nav>
+
+@if (Model.PageCount != 1)
+{
+    <nav aria-label="Page navigation">
+        <ul class="pagination justify-content-center">
+            @for (var i = 1; i <= Model.PageCount; i++)
+            {
+                <li class="page-item @(i == Model.CurrentPage ? "active" : "")">
+                    <a class="page-link" href="javascript:void(0);" onclick="loadPage(@i-1,event)">@i</a>
+                </li>
+            }
+        </ul>
+    </nav>
+}
 
 <div class="modal fade" id="confirmModalDelete" tabindex="-1" role="dialog" aria-labelledby="confirmModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
