--- a/CarMarketplace.Web/Areas/Seller/Views/Seller/Add.cshtml
+++ b/CarMarketplace.Web/Areas/Seller/Views/Seller/Add.cshtml
@@ -89,6 +89,7 @@
                     <option value="Hybrid">Hybrid</option>
                     <option value="Electric">Electric</option>
                 </select>
+                <span asp-validation-for="EngineFuelType" class="text-danger"></span>
             </div>
             <div class="mb-3 col-4">
                 <label class="form-label fs-4" asp-for="EngineHorsePower">Horsepower</label>
@@ -103,6 +104,7 @@
                 <option value="Manual">Manual</option>
                 <option value="Automatic">Automatic</option>
             </select>
+            <span asp-validation-for="TransmissionType" class="text-danger"></span>
         </div>
         <div class="mb-3">
             <label asp-for="Price" class="form-label fs-4">Price</label>
