--- a/CarMarketplace.Web/Areas/Seller/Views/Seller/UserPosts.cshtml
+++ b/CarMarketplace.Web/Areas/Seller/Views/Seller/UserPosts.cshtml
@@ -94,7 +94,9 @@
     </div>
 </div>
 
-<nav aria-label="...">
+@if (Model.PageCount != 1)
+{
+    <nav aria-label="Page navigation">
         <ul class="pagination justify-content-center">
             @for (var i = 1; i <= Model.PageCount; i++)
             {
@@ -104,7 +106,7 @@
             }
         </ul>
     </nav>
-
+}
 
 <script>
     function showConfirmArchive(id) {
