--- a/CarMarketplace.Web/Views/Sale/Result.cshtml
+++ b/CarMarketplace.Web/Views/Sale/Result.cshtml
@@ -77,16 +77,19 @@
             </div>
         </div>
     }
-    <nav aria-label="Page navigation">
-        <ul class="pagination justify-content-center">
-            @for (var i = 1; i <= Model.PageCount; i++)
-            {
-                <li class="page-item @(i == Model.CurrentPage ? "active" : "")">
-                    <a class="page-link" href="javascript:void(0);" onclick="loadPage(@i-1,event)">@i</a>
-                </li>
-            }
-        </ul>
-    </nav>
+    @if (Model.PageCount != 1)
+    {       
+        <nav aria-label="Page navigation">
+            <ul class="pagination justify-content-center">
+                @for (var i = 1; i <= Model.PageCount; i++)
+                {
+                    <li class="page-item @(i == Model.CurrentPage ? "active" : "")">
+                        <a class="page-link" href="javascript:void(0);" onclick="loadPage(@i-1,event)">@i</a>
+                    </li>
+                }
+            </ul>
+        </nav>
+    }
 </div>
 
 <script>
@@ -121,8 +124,19 @@
 
         event.preventDefault();
 
+        var url = '';
+        if (sessionStorage.getItem('action') == 'groups'){
+
+            url = '@Url.Action("ResultGroups", "Sale")';
+        }
+        else{
+
+            url = '@Url.Action("Result", "Sale")'
+        }
+
+
         $.ajax({
-            url: '@Url.Action("Result", "Sale")',
+            url: url,
             type: 'GET',
             data: { pageNum: pageNum },
             success: function (result) {
